# tictactoe-python

./: .flake8  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  states.json
tests/unit/agent/: test_random.py  test_searcher.py
tests/unit/database/: test_flat.py
tests/unit/environment/: test_board.py
tests/unit/game/: test_board.py
tests/unit/log/: test_logger.py
tictactoe/: app.py  app.wsgi  cli.py  lambda.py  states.json
tictactoe/agent/: __init__.py  base.py  enums.py  exceptions.py  human.py  random.py  searcher.py
tictactoe/database/: __init__.py  base.py  flat.py  memory.py
tictactoe/environment/: __init__.py  board.py  constants.py
tictactoe/game/: __init__.py  board.py  enums.py  exceptions.py  move.py  play.py
tictactoe/log/: __init__.py  logger.py
