[tool.poetry]
name = "tictactoe"
version = "0.1.0"
description = "TicTacToe, solved with Reinforcement Learning"
authors = ["Luis Da Silva <luisdanield@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"
numpy = "^1.22.1"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
black = "^21.12b0"
mypy = "^0.930"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.poetry.scripts]
tictactoe = 'tictactoe.cli:main'